...
    var body: some View {
        VStack(alignment: .leading) {
            VStack {
                
            Toggle(isOn: $showCore) {
                if showCore {
                    Text("Showing 💖")
                } else {
                    Text("Showing 🔗")
                }
            }.padding()
                
            SearchBar(
                text: $searchText,
                placeholder: "Search a module",
...
